# rust-crates

./: Cargo.toml  README.md  docker-compose.yml
try_actix_web/: Cargo.toml
try_actix_web/src/: bare.rs  equipped.rs  game.rs  main.rs
try_clap/: Cargo.toml  movies.csv
try_clap/src/: bare.rs  equiped.rs  error.rs  main.rs  movie.rs  movie_controller.rs
try_sea_orm/: .env  Cargo.toml
try_sea_orm/migration/src/: lib.rs  m20241223_134629_create_games_table.rs
try_sea_orm/src/: game_repository.rs  main.rs
try_sea_orm/src/entity/: game.rs  mod.rs  prelude.rs
